<resources>
    <string name="app_name">ShopOnDoor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="api_Key">"AIzaSyDb8NRMGe547lhFecu3qW5aIH7GxBvl9h0"</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="catagory">Catagory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NewProducts">newProducts</string>
    <string name="MyCart">myCart</string>
    <string name="MyOrders">myOrders</string>
    <string name="Offers">offers</string>
    <string name="newProducts">New Products</string>
    <string name="myCart">My Cart</string>
    <string name="myOrders">My Orders</string>
    <string name="offers">Offers</string>
    <string name="Home">Home</string>
    <string name="title_activity_view_all">ViewAllActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description cjakc oadsjjc sdkjcd</string>
    <string name="logout">LogOut</string>
</resources>