<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shopondoor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.shopondoor.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_catagory"
        android:name="com.example.shopondoor.ui.catagory.CatagoryFragment"
        android:label="@string/catagory"
        tools:layout="@layout/fragment_catagory" />

    <fragment
        android:id="@+id/nav_newProducts"
        android:name="com.example.shopondoor.NewProductsFragment"
        android:label="@string/newProducts"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.example.shopondoor.MyOrdersFragment"
        android:label="@string/myOrders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_myCart"
        android:name="com.example.shopondoor.MyCartFragment"
        android:label="@string/myCart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>